; ModuleID = '/home/carl/AnghaBench/DOOM/linuxdoom-1.10/extr_p_tick.c_P_RunThinkers.c'
source_filename = "/home/carl/AnghaBench/DOOM/linuxdoom-1.10/extr_p_tick.c_P_RunThinkers.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_9__ = type { %struct.TYPE_9__*, %struct.TYPE_7__, %struct.TYPE_8__* }
%struct.TYPE_7__ = type { i64, i32 (%struct.TYPE_9__*)* }
%struct.TYPE_8__ = type { %struct.TYPE_9__* }

@thinkercap = common dso_local global %struct.TYPE_9__ zeroinitializer, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @P_RunThinkers() #0 {
  %1 = alloca %struct.TYPE_9__*, align 8
  %2 = load %struct.TYPE_9__*, %struct.TYPE_9__** getelementptr inbounds (%struct.TYPE_9__, %struct.TYPE_9__* @thinkercap, i32 0, i32 0), align 8
  store %struct.TYPE_9__* %2, %struct.TYPE_9__** %1, align 8
  br label %3

3:                                                ; preds = %43, %0
  %4 = load %struct.TYPE_9__*, %struct.TYPE_9__** %1, align 8
  %5 = icmp ne %struct.TYPE_9__* %4, @thinkercap
  br i1 %5, label %6, label %47

6:                                                ; preds = %3
  %7 = load %struct.TYPE_9__*, %struct.TYPE_9__** %1, align 8
  %8 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %7, i32 0, i32 1
  %9 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %8, i32 0, i32 0
  %10 = load i64, i64* %9, align 8
  %11 = icmp eq i64 %10, -1
  br i1 %11, label %12, label %29

12:                                               ; preds = %6
  %13 = load %struct.TYPE_9__*, %struct.TYPE_9__** %1, align 8
  %14 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %13, i32 0, i32 2
  %15 = load %struct.TYPE_8__*, %struct.TYPE_8__** %14, align 8
  %16 = load %struct.TYPE_9__*, %struct.TYPE_9__** %1, align 8
  %17 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %16, i32 0, i32 0
  %18 = load %struct.TYPE_9__*, %struct.TYPE_9__** %17, align 8
  %19 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %18, i32 0, i32 2
  store %struct.TYPE_8__* %15, %struct.TYPE_8__** %19, align 8
  %20 = load %struct.TYPE_9__*, %struct.TYPE_9__** %1, align 8
  %21 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %20, i32 0, i32 0
  %22 = load %struct.TYPE_9__*, %struct.TYPE_9__** %21, align 8
  %23 = load %struct.TYPE_9__*, %struct.TYPE_9__** %1, align 8
  %24 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %23, i32 0, i32 2
  %25 = load %struct.TYPE_8__*, %struct.TYPE_8__** %24, align 8
  %26 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %25, i32 0, i32 0
  store %struct.TYPE_9__* %22, %struct.TYPE_9__** %26, align 8
  %27 = load %struct.TYPE_9__*, %struct.TYPE_9__** %1, align 8
  %28 = call i32 @Z_Free(%struct.TYPE_9__* %27)
  br label %43

29:                                               ; preds = %6
  %30 = load %struct.TYPE_9__*, %struct.TYPE_9__** %1, align 8
  %31 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %30, i32 0, i32 1
  %32 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %31, i32 0, i32 1
  %33 = load i32 (%struct.TYPE_9__*)*, i32 (%struct.TYPE_9__*)** %32, align 8
  %34 = icmp ne i32 (%struct.TYPE_9__*)* %33, null
  br i1 %34, label %35, label %42

35:                                               ; preds = %29
  %36 = load %struct.TYPE_9__*, %struct.TYPE_9__** %1, align 8
  %37 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %36, i32 0, i32 1
  %38 = getelementptr inbounds %struct.TYPE_7__, %struct.TYPE_7__* %37, i32 0, i32 1
  %39 = load i32 (%struct.TYPE_9__*)*, i32 (%struct.TYPE_9__*)** %38, align 8
  %40 = load %struct.TYPE_9__*, %struct.TYPE_9__** %1, align 8
  %41 = call i32 %39(%struct.TYPE_9__* %40)
  br label %42

42:                                               ; preds = %35, %29
  br label %43

43:                                               ; preds = %42, %12
  %44 = load %struct.TYPE_9__*, %struct.TYPE_9__** %1, align 8
  %45 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %44, i32 0, i32 0
  %46 = load %struct.TYPE_9__*, %struct.TYPE_9__** %45, align 8
  store %struct.TYPE_9__* %46, %struct.TYPE_9__** %1, align 8
  br label %3

47:                                               ; preds = %3
  ret void
}

declare dso_local i32 @Z_Free(%struct.TYPE_9__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
